--- a/summerProject/src/main/resources/application.properties
+++ b/summerProject/src/main/resources/application.properties
@@ -1,7 +1,4 @@
 
-spring.data.mongodb.host=[host]
-spring.data.mongodb.port= 8080
-spring.data.mongodb.authentication-database=[authentication_database]
-spring.data.mongodb.username=[username]
-spring.data.mongodb.password=[password]
-spring.data.mongodb.database=rest_tutorial
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port= 27017
+spring.data.mongodb.database=insuranceDB
